# knime2py

./: .dockerignore  .gitignore  .ragignore  Dockerfile  README.md  emitters.py  implemented.html  implemented.py  install.sh  k2p.py  k2p.sh  k2p_docker.sh  k2p_docker_local.sh  k2p_pex.sh  mkdocs.yml  pex_yml_local.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_gen.sh  xml_utils.py
.github/workflows/: gh-pages.yml  release-docker.yml  release-pex.yml  sbom.yml
docs/: implemented.html  index.html  index.md  installation.md  quickstart.md  rag.md  tests.md  ui.md
docs/_scripts/: gen_api.py
docs/api/: knime2py.md
knime2py/: emitters.py  parse_knime.py
knime2py/nodes/: column_appender.py  column_filter.py  csv_reader.py  csv_writer.py  decision_tree_learner.py  decision_tree_predictor.py  equal_size_sampling.py  excel_reader.py  gbt_learner.py  gbt_predictor.py  logreg_learner.py  logreg_predictor.py  math_formula.py  missing_value.py  mlp_learner.py  mlp_predictor.py  node_utils.py  normalizer.py  not_implemented.py  partitioning.py  random_forest_learner.py  random_forest_predictor.py  registry.py  roc_curve.py  row_filter.py  rule_engine.py  scorer.py  smote.py  statistics.py  string_mamipulatioin_mc.py  string_to_number.py  svm_learner.py  svm_predictor.py  x_aggregator.py  x_partitioner.py
rag/: index_openai.py  index_repo.py  index_sbert.py  query.py  query_ollama.py  query_openai.py  query_openai_file.py  rag_utils.py  snapshot_structure.py
scripts/: doc_generator.sh  docker_pull.sh  implemented.sh  install.sh  k2p.sh  k2p_docker.sh  k2p_pex.sh  ollama_start.sh  pex_local_build.sh  rag_index_rebuild.sh  rag_query.sh  rag_query_files.sh  release.sh  test_gen.sh
src/knime2py/: __init__.py  cli.py  emitters.py  implemented_cli.py  parse_knime.py  traverse.py  xml_utils.py
src/knime2py/nodes/: __init__.py  color_manager.py  column_appender.py  column_filter.py  column_renamer.py  concatenate.py  csv_reader.py  csv_writer.py  decision_tree_learner.py  decision_tree_predictor.py  equal_size_sampling.py  excel_reader.py  excel_writer.py  gbt_learner.py  gbt_predictor.py  knn.py  linear_corellation.py  logreg_learner.py  logreg_predictor.py  math_formula.py  missing_value.py  mlp_learner.py  mlp_predictor.py  naive_bayes_learner.py  naive_bayes_predictor.py  node_utils.py  normalizer.py  not_implemented.py  one_to_many.py  partitioning.py  registry.py  (+18 more)
src/knime_ui/: node_script.py
src/test_gen/: cli.py
tests/: cleaner.py  conftest.py  test_HW_Churn_test.py  test_HW_Churn_test_preparation.py  test_ISU_Master_test.py  test_ISU_Master_test_preparation.py  test_csv_reader_node.py  test_functional_KNIME_CP_10FCV_GBT.py  test_functional_KNIME_PP_2022_DT.py  test_functional_KNIME_PP_2022_Ensemble.py  test_functional_KNIME_PP_2022_LR.py  test_io_csv_workflow.py  test_nodeblocks_column_filter.py  test_nodeblocks_csv_writer.py  test_nodeblocks_missing_value.py  test_nodeblocks_normalizer.py  test_nodeblocks_partitioning.py  test_nodeblocks_rule_engine.py  test_single_csv_reader.py  test_traverse_order.py  test_two_graphs_components.py
tests/support/: __init__.py  csv_compare.py
(+210 files in other folders)
